# mars-dtc

./: .gitignore  CITATION.CFF  LICENSE  README.md  _quarto.yml  index.qmd  pyproject.toml
demo/: demo.ipynb  mars_weather_data.csv
docs/: index.html  search.json
docs/demo/: demo.html
docs/docs_source/: intro.html  martian_calendars.html  references.html
docs_source/: intro.qmd  martian_calendars.qmd  references.bib
mars_dtc/: __init__.py  base_calendar.py  darian_calendar.py  mars_dtc.py  pandas_ext.py  plotting.py  utils.py
tests/: test_darian_calendar.py  test_mars_utilities.py  test_marsdate_arithmetic.py  test_marsdate_basic.py  test_marsdate_comparisons.py  test_marsdate_floor_ceil.py  test_marsdate_formatting.py  test_marsdate_hashing.py  test_marsdate_ordinals.py  test_marsdate_pandas_integration.py  test_marsdate_serialization.py  test_marsdatearray_diff.py  test_marsdatearray_string_inputs.py  test_marsdatetime.py
