[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mars-dtc"
version = "0.1.0"
description = "Integrated Martian calendar and datetime support for Python"
authors = [{ name = "Victor De Lima" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["mars", "datetime", "pandas", "astronomy"]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mars_dtc*"]
exclude = ["tests*", "docs*", "demo*"]

[project.urls]
Homepage = "https://purl.org/victordelima/mars-dtc"
Repository = "https://purl.org/victordelima/mars-dtc"
Documentation = "https://purl.org/victordelima/mars-dtc"