[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mars-dtc"
version = "0.1.3"
description = "Integrated Martian datetime and calendar support for Python"
authors = [{ name = "Victor De Lima" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["mars", "datetime", "pandas", "matplotlib", "astronomy"]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mars_dtc*"]
exclude = ["tests*", "docs*", "demo*"]

[project.urls]
Homepage = "https://www.victordelima.com/mars-dtc/"
Repository = "https://purl.org/victordelima/mars-dtc"
